--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Demo</title>
   <meta charset="utf-8">
 </head>
-<body>
-  <div id="app" />
+<body style="width: 100%; height: 100%; display: block; position: absolute; margin: 0; top: 0; left: 0;">
+  <div id="app" style="width: 100%; height: 100%; display: block; position: absolute; margin: 0; top: 0; left: 0;" />
 </body>
 </meta>
 </html>
